# memilio

cpp/: CMakeLists.txt
cpp/examples/: CMakeLists.txt  ode_sis.cpp
cpp/models/ode_sis/: CMakeLists.txt  infection_state.h  model.cpp  model.h  parameters.h
pycode/memilio-simulation/memilio/simulation/: osis.cpp  osis.py
